# joycad

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Makefile  QUICKSTART.md  README.md  pyproject.toml  render.yaml
ai/: __init__.py  base.py  cad_script_generator.py  llm_client.py  mock_llm.py  prompt_refiner.py  rag_store.py  tool_definitions.py
cad/: __init__.py  base.py  cadquery_engine.py  freecad_engine.py  fusion_engine.py  geometry_io.py  onshape_engine.py  svg_render.py
cam/: __init__.py  base.py  blendercam_stub.py  cadquery_cam.py  freecad_path.py  gcode_validator.py  linuxcnc_post.py  opencamlib_cam.py  post_processor.py  tool_db.py
config/: default_settings.yaml  dfm_rules.yaml
config/machines/: grbl_3018.yaml  linuxcnc_3axis.yaml  marlin_fdm.yaml
config/materials/: 6061-t6.yaml
examples/bracket/: intent.json  reference_cadquery.py  run_example.py
examples/bracket/outputs/: bom.csv  bom.json  brief.json  manufacturing_notes.md  part.cadquery.params.json  part.cadquery.py  part.dxf  part.gcode  part.step  part.stl  pipeline_result.json  toolpaths.json
knowledge/: cad_snippets.jsonl
orchestrator/: __init__.py  api.py  cli.py  pipeline.py  settings.py  static_ui.py  web.py
outputs/: __init__.py  bom.py  drawings.py  manufacturing_notes.py
scripts/: smoke_test_streamlit.py
slicing/: __init__.py
tests/: test_bundle.py  test_cadquery_engine.py  test_collision_aabb.py  test_mvp.py  test_settings_api.py
validation/: __init__.py  base.py  collision_aabb.py  collision_fcl.py  dfm.py  fea_calculix.py  tolerance_stack.py
