[project]
name = "joycad"
version = "0.1.0"
description = "AI-driven CAD/CAM pipeline bundle"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
    # AI layer
    "openai>=1.40",
    "anthropic>=0.34",
    "requests>=2.31",
    "numpy>=1.26",
    # RAG
    "faiss-cpu>=1.8",
    "sentence-transformers>=2.7",
    # CAD/CAM
    "cadquery>=2.4",
    "ezdxf>=1.2",
    "svgwrite>=1.4",
    "trimesh>=4.0",
    "numpy-stl>=3.5",
    # Validation
    "scipy>=1.13",
    "meshio>=5.3",
    # CLI / API / Web
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "streamlit>=1.30",
    # Utilities
    "loguru>=0.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
freecad = [
    # FreeCAD ships its own Python; install via OS package manager:
    #   sudo apt install freecad
    # then use freecadcmd (Linux) or FreeCADCmd.exe (Windows)
]
fcl = ["python-fcl>=0.7"]
fea = ["felupe>=8.0"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[project.scripts]
joycad = "orchestrator.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ai*", "cad*", "cam*", "validation*", "outputs*", "slicing*", "orchestrator*"]
exclude = ["tests*", "examples*"]
